# webmPlayerExample

./: .gitignore  README.md
WebmPlayer/: CMakeLists.txt  README.md  opensource_licenses.txt
WebmPlayer/example/: run.bat  run_d.bat
WebmPlayer/include/: webm_player.hpp
WebmPlayer/runtime/win64/lib/: libWebmPlayer_d.lib
WebmPlayer/src/: main.cpp  webm_player.cpp
